objects/revcult__Alert__c.object
<CustomObject>
    <fields>
        <fullName>revcult__AlertConfigId__c</fullName>
        <description>deprecated</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Config Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>revcult__Alert_Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Operator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Sub_Alert_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Alert Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OwnBackup Alert</label>
    <listViews>
        <fullName>revcult__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Alert-{00000000}</displayFormat>
        <label>OwnBackup Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OwnBackup Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>